Final fixes and jar files.